# OptionChain-Simulator

./: .gitignore  Cargo.toml  Makefile  README.md  README.tpl
.github/workflows/: ci.yml  release.yml
Docker/: Dockerfile  docker-compose.yml
doc/: api.md  architecture.md  session-management.md
doc/api/: basic.md
doc/infrastructure/: layer.md
doc/infrastructure/clickhouse/: client.md
doc/requests/: create_session.json  update_session.json
doc/session/: manager.md
examples/clickhouse/: Cargo.toml
examples/session/: Cargo.toml
infrastructure/clickhouse/: init.sql
infrastructure/clickhouse/data/: CL.csv
scripts/: init_clickhouse.sh
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/rest/: controller.rs  error.rs  favicon.rs  handlers.rs  limits.rs  middleware.rs  mod.rs  models.rs  patch.rs  requests.rs  responses.rs  routes.rs  swagger.rs  validation.rs
src/domain/: mod.rs  simulator.rs  walker.rs
src/infrastructure/: mod.rs
src/infrastructure/clickhouse/: client.rs  interface.rs  mod.rs  model.rs  utils.rs
src/infrastructure/config/: clickhouse.rs  mod.rs  mongo.rs  redis.rs
src/infrastructure/mongodb/: client.rs  mod.rs
src/infrastructure/redis/: client.rs  mod.rs
src/infrastructure/repositories/: historical_repo.rs  mod.rs  mongo_repo.rs
src/infrastructure/telemetry/: collector.rs  middleware.rs  mod.rs  prometheus.rs
src/session/: manager.rs  mod.rs  model.rs  state_handler.rs  store.rs
src/session/store/: in_memory.rs  in_redis.rs  interface.rs  mod.rs
src/utils/: error.rs  mod.rs  uuid.rs
