[package]
name = "optionchain_simulator"
version = "0.0.2"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "OptionChain-Simulator is a lightweight REST API service that simulates an evolving option chain with every request. It is designed for developers building or testing trading systems, backtesters, and visual tools that depend on option data streams but want to avoid relying on live data feeds."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/OptionChain-Simulator"
homepage = "https://github.com/joaquinbejar/OptionChain-Simulator"
keywords = ["finance", "options", "trading"]
categories = ["finance", "data-structures"]

[dependencies]
optionstratlib = "0.4.6"
tracing = "0.1.41"
rust_decimal = { version = "1.37.1", features = ["maths", "serde"] }
rust_decimal_macros = "1.37.1"
serde_json = "1.0.140"
serde = "1.0.219"
uuid = { version = "1.16.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clickhouse = "0.13.2"
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"
actix-web = { version = "4.10.2", features = ["rustls"] }
actix-files = "0.6.6"
redis = "0.30.0"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web"] }
rand = "0.9.1"
prometheus = "0.14.0"
futures = "0.3.31"
mongodb = "3.2.3"


[dev-dependencies]
mockall = "0.13.1" 
tempfile = "3.19.1"
once_cell = "1.21.3"
tokio = { version = "1.44.2", features = ["full", "test-util"] }


[workspace]
members = [
    "examples/session",
    "examples/clickhouse",
]

[workspace.dependencies]
optionstratlib = "0.4.5"
tracing = "0.1.41"
