[package]
name = "examples_clickhouse"
version = "0.1.0"
edition = "2024"

[dependencies]
optionchain_simulator = { workspace = true }
optionstratlib = { workspace = true }
positive = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
